--- a/war/src/main/webapp/engines/jahia-anthracite/_workflow.scss
+++ b/war/src/main/webapp/engines/jahia-anthracite/_workflow.scss
@@ -5,6 +5,11 @@
 
 
 .workflow-dashboard-engine {
+
+	.indigo-modal-mask {
+		display: none;
+	}
+
 	background:  lighten($EDIT_ENGINE--BASE--COLOUR, 2%) !important;
 
 	.x-window-bwrap {
